data/derived/comb/progs/unify/prog0821.ml.out
Characters 139-140:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         string list
